fxed api key issues