@@ -1,4 +1,3 @@
-// ApiKeyFilter.java
 package com.theplutushome.topboy.config;
 
 import jakarta.servlet.FilterChain;
@@ -13,7 +12,8 @@ import org.springframework.web.filter.OncePerRequestFilter;
 import org.springframework.lang.NonNull;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -24,57 +24,53 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 @PropertySource("classpath:application.yml")
 public class ApiKeyFilter extends OncePerRequestFilter {
 
-    Logger log = LoggerFactory.getLogger(ApiKeyFilter.class);
+    private static final Logger log = LoggerFactory.getLogger(ApiKeyFilter.class);
     private static final String API_KEY_HEADER = "X-API-KEY";
-    private final String EXPECTED_API_KEY; // Replace with your API key
+    private final String expectedApiKey;
 
-    // Inject the Environment and retrieve the API key
     public ApiKeyFilter(Environment environment) {
-        String apiKey = environment.getProperty("application.api.key");
-        if (apiKey == null) {
+        String rawKey = environment.getProperty("application.api.key");
+        if (rawKey == null || rawKey.trim().isEmpty()) {
             throw new IllegalStateException("API key must be configured via application.api.key");
         }
-        this.EXPECTED_API_KEY = apiKey;
+        this.expectedApiKey = rawKey.trim();
     }
 
     @Override
-    protected void doFilterInternal(@NonNull HttpServletRequest request,
+    protected void doFilterInternal(
+            @NonNull HttpServletRequest request,
             @NonNull HttpServletResponse response,
             @NonNull FilterChain filterChain) throws ServletException, IOException {
-        log.info("ApiKeyFilter: doFilterInternal");
 
         if (HttpMethod.OPTIONS.matches(request.getMethod())) {
             filterChain.doFilter(request, response);
             return;
         }
 
-        // Attempt API Key validation
-        String apiKey = request.getHeader(API_KEY_HEADER);
+        String headerKey = request.getHeader(API_KEY_HEADER);
+        if (headerKey != null) {
+            String providedKey = headerKey.trim();
 
-        if (apiKey != null) {
-
-            log.warn("Provided key chars: " + apiKey.chars().boxed().toList());
-            log.warn("Expected key chars: " + EXPECTED_API_KEY.chars().boxed().toList());
-            
-            if (EXPECTED_API_KEY.equals(apiKey)) {
-                // Set authentication with ROLE_API
+            if (expectedApiKey.equals(providedKey)) {
                 UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                        "apiClient", null, Collections.singletonList(new SimpleGrantedAuthority("ROLE_API")));
+                        "apiClient",
+                        null,
+                        List.of(new SimpleGrantedAuthority("ROLE_API"))
+                );
                 SecurityContextHolder.getContext().setAuthentication(auth);
-                log.info("ApiKeyFilter: Authentication set for ROLE_API");
-                filterChain.doFilter(request, response);
-                return;
+                log.debug("API key authentication successful.");
             } else {
-                // Invalid API Key provided
-                log.warn("ApiKeyFilter: Invalid API Key provided ----> " + apiKey + " the expected key is --> " + EXPECTED_API_KEY);
+                log.warn("Invalid API Key provided. Provided: [{}] | Expected: [{}]", providedKey, expectedApiKey);
+                log.warn("Provided chars: {}", providedKey.chars().boxed().toList());
+                log.warn("Expected chars: {}", expectedApiKey.chars().boxed().toList());
+
                 response.setStatus(HttpServletResponse.SC_FORBIDDEN);
                 response.getWriter().write("Forbidden: Invalid API Key");
                 return;
             }
         }
 
-        // API Key is absent, allow other filters (like JwtFilter) to handle
-        // authentication
+        // Let other filters handle if no key was provided
         filterChain.doFilter(request, response);
     }
 }
